grammar.js
    module: $ =>
      seq(
        optional($.version_declaration),
        choice($._library_module, $._main_module)
      ),
    _library_module: $ => seq($.module_declaration, $._prolog),
    _main_module: $ => seq(optional($._prolog), $._query_body),
    _expr: $ => choice( // statement like expressions all prec 2
      $._primary_expr,
      $.flwor_expr,
     $.quantified_expr,
     $.switch_expr,
     $.if_expr,
     $.typeswitch_expr,
     $.try_catch_expr,
    $.or_expr, // 83             prec: 3
    $.and_expr, // 84            prec: 4
    $.comparison_expr, // 85     prec: 5
    $.string_concat_expr, // 86  prec: 6
    $.range_expr, // 87          prec: 7
    $.additive_expr, // 88       prec: 8
    $.multiplicative_expr, // 89 prec: 9
    $.union_expr, // 90          prec: 10 
    $.intersect_except_expr,//91 prec: 11
    $.instance_of_expr, // 92    prec: 12
    $.treat_expr, // 93          prec: 13
    $.castable_expr, // 94       prec: 14
    $.cast_expr, // 95           prec: 15
    $.arrow_expr, // 96          prec: 16
    $.unary_expr, //  97         prec: 17 '-' '+' arithmetic prefix right to left
    $.bang_expr, //107           prec: 18
    $.path_expr, //108           prec: 19   '/' '//'  not relative path?
      //  $.predicate //124        prec: 20 @primary postfix predicate '[' ']'
      //  $.postfix_lookup //125   prec: 20 @primary postfix lookup   '?'
      //  $.unary_lookup,// 181    prec: 21 @primary unary lookup
      //seq($._primary_expr, optional( $._postfix_expr )) 
    ),
    // 3.1 Primary Expressions
    _primary_expr: $ => prec.left(PREC.primary,seq(choice(
      $._literal, // 57
      $.var_ref, // 59
      $.parenthesized_expr, // 133
      $.context_item_expr, // 134
      $.ordered_expr, // 135
      $.unordered_expr, // 136
      $.function_call, // 137
      $._direct_constructor,  // 141 node constructors 140 
      $._computed_constructor, // 155 // node constructors 140
      $.named_function_ref,   // 168  function item 167
      $.inline_function_expr, // 169 function item 167
      $.map_constructor, // 170
      $.square_array_constructor, // 175 array_constructor 174
      $.curly_array_constructor, // 176  array_constructor 174
      $.string_constructor, // 177
      $.unary_lookup // 181
     ), optional($._postfix_expr))),
    // 3.1.1 Literals
    string_literal: $ => choice(
        seq( '"', repeat(choice($.predefined_entity_ref, $.char_ref, $.escape_quote, /[^"&]/)),'"'),
        seq( "'", repeat(choice($.predefined_entity_ref, $.char_ref, $.escape_apos, /[^'&]/)),"'")),
    var_ref: $ => seq('$',  $.EQName ),
    // note: a dynamic function call can consist of _postfix_expr [ var_ref + argument_list ]
    // 3.1.3 Parenthesized Expressions
    parenthesized_expr: $ =>  seq('(', commaSep($._expr), ')'), // 133
    //3.1.4 Context Item Expression TODO not like spec
    function_call: $ => prec.left(25,seq( 
      choice( field( 'dynamic', $.var_ref),field('static', $.EQName)),
      $.argument_list)), // 137 spec deviation added $var_ref
    //function_call: $ => prec.left(25 ,seq( $.EQName, $.argument_list)), // 137
    // 3.1.6 Named Function References
    enclosed_expr: $ => prec(1, seq('{', commaSep($._expr), '}')), // 5
    // 3.2 Postfix Expressions TODO
    //_postfix_expr: $ =>  seq($._primary_expr, optional(repeat1(choice($.predicate, $.argument_list, $.postfix_lookup)))), // 49
    predicate: $ => prec(20, seq( '[', field('filter', $._expr ), ']')), //124
    // 3.2.2 Dynamic Function Calls
    argument_list: $ => prec(1,seq('(', commaSep($.argument), ')')), // 122
    argument: $ => choice($._expr, $.argument_placeholder), // 138
    path_expr: $ => prec.left(19, 
      choice(
        seq('/', optional($._relative_path_expr)), //parse-note-leading-lone-slash
        seq( '//', $._relative_path_expr ),  // must have relative_path_expr 
        $._relative_path_expr  // can stand alone
      )
    ),
    _relative_path_expr: $ => prec.left(seq($._step_expr, optional( repeat1 (seq( choice('/', '//'), $._step_expr))))), //109 
    abbrev_forward_step: $ => seq(optional($.abbrev_attr), $._node_test), // 117
    _node_test: $ => choice( $._kind_test, $.name_test), // 118'

    and_expr: $ => prec.left(4,seq( field('lhs', $._expr), 'and', field('rhs', $._expr))),
    comparison_expr: $ => prec.left(5,seq(field('lhs',$._expr),choice('eq','ne','lt','le','gt','ge','=','!=','<','<=','>','>=','is','<<','>>'),field('rhs',$._expr))),
    string_concat_expr: $ => prec.left(6,seq(field('lhs', $._expr),repeat1(seq('||',field('rhs', $._expr))))), // 86
    additive_expr: $ => prec.left(8,seq( field('lhs', $._expr), choice('+','-' ), field('lhs', $._expr))),
    multiplicative_expr: $ => prec.left(9,seq( field('lhs', $._expr), choice('*','div','idiv','mod'), field('rhs', $._expr))),
    instance_of_expr: $ => prec.left(12, seq(
      field('lhs', $._expr),
      seq('instance','of'),
      field('rhs', $.sequence_type))), // 92
    treat_expr: $ => prec(13,seq(
      field('lhs', $._expr),
      seq('treat', 'as'),
      field('rhs', $.sequence_type))), // 93
    castable_expr: $ => prec(14, seq(
      field('lhs', $._expr),
      seq('castable', 'as'),
      field('rhs', $.single_type))), // 94
    cast_expr: $ => prec(15, seq( 
      field('lhs', $._expr), 
      seq( 'cast', 'as',
      field('rhs', $.single_type)))), // 95
    arrow_expr: $ => prec.left(16, seq( 
      field('rhs', $._expr), 
      repeat1( seq( '=>', $.arrow_function)))), // 94
    bang_expr: $ => prec.left(18,seq(
          field('lhs', $._expr), // TODO
          repeat1( seq( '!', 
          field('rhs', $._expr)
        )))
      ), // 107
    single_type: $ => prec.left(seq($.EQName, optional('?'))), // 182
    direct_element: $ => choice( 
      seq($.start_tag, repeat(choice($.direct_element, $.element_text)), $.end_tag),
      $.empty_tag ),
    start_tag: $ => seq( '<', $._QName, repeat($.direct_attribute),'>'),
    end_tag: $ => seq('</',  $._QName, '>'),
    direct_attribute: $ => seq( $._QName, '=',  $.direct_attribute_value),
    char_data: $ => /[^{}<&]+/,
    char_ref: $ => choice( seq('&#', repeat1(/[0-9]/), ';'),seq('&#x', repeat1(/[0-9a-fA-F]/), ';') ),
    predefined_entity_ref: $ => seq('&', choice('lt', 'gt', 'amp', 'quot', 'apos'), ';'),
      string_constructor: $ => seq('``[', repeat( choice($.char_group, $.interpolation)), ']``'), // 177
    // TODO this is not correct  string content is external in other tree sitters
    char_group: $ => token(prec.left(repeat1(/[^`\]]/))), // TODO
    interpolation: $ => seq('`{', commaSep($._expr), '}`'), // 1p80',
    //3.11 Maps and Arrays
    map_constructor: $ => seq('map',seq('{',commaSep($.map_entry),'}')),//170
    map_entry: $ => seq(field('key', $._expr), ':', field('value', $._expr)),
    // 3.11.2 Arrays
    curly_array_constructor: $ =>
      seq(
        'array',
        field('content', $.enclosed_expr)
      ),
    square_array_constructor: $ => seq('[', commaSep($._expr), ']'),
    unary_lookup: $ => prec.left( 21 , seq( '?', $._key_specifier)),
    _key_specifier: $ => choice($.NCName, $.lookup_digit, $.parenthesized_expr, $.lookup_wildcard), // 54
    lookup_digit: $ => repeat1(/\d/),
    flwor_expr: $ => prec(2,seq($._initial_clause, optional($._intermediate_clause), $.return_clause)), // 41
    _initial_clause: $ =>
      choice(
        $.for_clause, // 44
        $.let_clause // 48
      ),
    //3.12.2 For Clause
    for_clause: $ => seq('for', commaSep($.for_binding)), // 44',
    for_binding: $ =>
      seq(
        '$',
        field('var_name', $.EQName),
        optional($.type_declaration),
        optional(seq('allowing', 'empty')),
        optional(seq('at', '$', field('at_var_name', $.EQName))),
        'in',
        $._expr
      ), // 45
    // 3.12.3 Let Clause
    let_clause: $ => seq('let', commaSep1($.let_binding)),
    let_binding: $ =>
      seq(
        '$',
        field('var_name', $.EQName),
        optional($.type_declaration),
        ':=',
        $._expr
      ),
    _intermediate_clause: $ =>
      repeat1(
        choice(
          $._initial_clause,
          $.where_clause,
          $.group_by_clause,
          $.order_by_clause,
          $.count_clause
        )
      ), // 43',
    // 3.12.4 Window Clause
    //3.12.5 Where Clause
    where_clause: $ => seq('where', $._expr), // 60
    // 3.12.6 Count Clause
    count_clause: $ => seq('count', '$', field('var_name', $.EQName)), //   59
    // 3.12.7 Group By Clause
    group_by_clause: $ => seq('group', 'by', commaSep1($._grouping_spec)), // 61
    _grouping_spec: $ =>
      seq(
        '$',
        field('var_name', $.EQName),
        optional(seq(optional($.type_declaration), ':=', $._expr)),
        optional(seq('collation', field('uri', $.string_literal)))
      ), // 63
    // 3.12.8 Order By Clause
    order_by_clause: $ =>
      prec.left(
        seq(
          choice(seq('order', 'by'), seq('stable', 'order', 'by')),
          commaSep($._order_spec)
        )
      ), // 65
    _order_spec: $ =>
      seq(
        field('order_expr', $._expr),
        field(
          'order_modifier',
          optional(seq(choice('ascending', 'descending'))),
          optional(seq('empty', choice('greatest', 'least'))),
          optional(seq('collation', field('uri', $.string_literal)))
        )
      ),
    //3.12.9 Return Clause
    return_clause: $ => seq('return', $._expr), // 69
    // end flwor
    // ++++++++++++++++++++++++++++++++++++++++++++++++++
    // 3.13 Ordered and Unordered Expressions
    ordered_expr: $ => seq('ordered', $.enclosed_expr), // 135
    unordered_expr: $ => seq('unordered', $.enclosed_expr), // 136
    // 3.14 Conditional Expressions
    if_expr: $ => prec(2, seq($.if_condition, $.then_consequence, $.else_alternative)),
    if_condition: $ => seq('if', '(', $._expr, ')'),
    then_consequence: $ => seq('then', $._expr),
    else_alternative: $ => seq('else', $._expr),
    // 3.15 Switch Expression
    switch_expr: $ => prec(2,seq(
          'switch',
          $.switch_value,
          repeat1($.switch_clause),
          $.switch_default)), // 71
    switch_value: $ => seq('(', commaSep1($._expr), ')'), // 72
    switch_clause: $ =>
      seq(
        'case',
        field('operand', $._expr),
        'return',
        field('return', $._expr)
      ), // 72
    switch_default: $ => seq('default', 'return', field('return', $._expr)),
    // 3.16 Quantified Expressions TODO
    quantified_expr: $ => prec(2, seq(
          choice('some', 'every'),
          $.var_ref, optional($.type_declaration),
          'in', $._expr, 'satisfies', $._expr
        )
      ),
    // 3.17 Try/Catch Expressions
    try_catch_expr: $ => prec(2, seq($.try_clause, $.catch_clause)), // 78
    try_clause: $ => seq('try', $.enclosed_expr), // 78
    catch_clause: $ => seq('catch', $.catch_error_list, $.enclosed_expr), // 79
    catch_error_list: $ => seq($.name_test, repeat(seq('|', $.name_test))) ,
    typeswitch_expr: $ => prec(2,seq( 
      'typeswitch',
      $.typeswitch_operand,
      repeat1($.typeswitch_clause),
      $.typeswitch_default)), // 74
    // commaSep1( $._expr ),
    typeswitch_operand: $ =>
      seq('(', field('operand', commaSep1($._expr)), ')'), // 72
    typeswitch_clause: $ =>
      seq($.typeswitch_case_type, $.typeswitch_case_return), // 72
    typeswitch_case_type: $ =>
      seq('case', optional(seq($.var_ref, 'as')), $.sequence_type),
    typeswitch_case_return: $ => seq('return', $._expr),
    typeswitch_default: $ =>
      seq('default', optional($.var_ref), 'return', $._expr),
    //3.18.5 Constructor Functions TODO
    // 3.19 Simple map _operator (!)
    // 3.21 Validate Expressions TODO
    // 3.22 Extension Expressions TODO
    //4.1 Version Declaration
    version_declaration: $ =>
      seq('xquery', choice($._encoding, $._version, $._version_encoding), ';'),
    _encoding: $ => seq('encoding', $.string_literal),
    _version: $ => seq('version', $.string_literal),
    _version_encoding: $ => seq($._version, $._encoding),
    //4.2 Module Declaration
    type_declaration: $ => seq('as', $.sequence_type),
    sequence_type: $ => prec.left(choice($.empty_sequence, $._item)), // 184
    _item: $ => prec.right(seq($._item_type, optional($.occurrence_indicator))),
    atomic_or_union_type: $ => $.EQName, // 187
    text_test: $ => seq('text', '(',')'), // 191
    element_test: $ =>
    seq(
      'element',
      field('type_params', 
        seq(
          '(',
          optional( 
            $.element_test_params
            ),
          ')'
        ))
    ), // 199
    element_test_params: $ =>
    seq(
      field('param', choice(alias('*', $.wildcard), $.EQName)),
      optional(
        seq(
          ',',
          field(
            'param',
            seq($.EQName, optional(alias('?', $.occurrence_indicator)))
          )
        )
      )),
    // same as element but no nilled test as attributes don't have children
    wildcard: $ =>
      choice( '*',
        seq($.NCName, ':*' ),
        seq('*:', $.NCName),
        seq($.braced_uri_literal, '*')
      ), // 120
    integer_literal: $ => token(INTEGER),
    _QName: $ =>
      prec.right(
        choice(
          field('unprefixed', $.identifier),
          seq(
            field('prefix', $.identifier),
            token.immediate(':'),
            field('local_part', $.identifier)
          )
        )
      ),
    identifier: $ => /[_A-Za-z]{1}[\-\w]*/,
